--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="google-site-verification" content="3QAamzyuxCQH3H8adSGtpAG3rwv7Ck6cb0XMGdyZgXg" />
 		<meta name="description" content="A simple and elegant Free Hash Checker for desktop" />
 		<meta name="author" content="TechLearners" />
-		<meta property="og:url" content="https://free-hash-checker.sourceforge.io/" />
+		<meta property="og:url" content="https://hash-checker.techlearners.xyz/" />
 		<meta property="og:title" content="Free Hash Checker" />
 		<meta property="og:description" content="A simple and elegant Free Hash Checker for desktop" />
-		<meta property="og:image" content="https://free-hash-checker.sourceforge.io/images/screenshot-promo.jpg" />
+		<meta property="og:image" content="https://hash-checker.techlearners.xyz/images/screenshot-promo.jpg" />
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:description" content="A simple and elegant Free Hash Checker for desktop" />
-		<meta name="twitter:image" content="https://free-hash-checker.sourceforge.io/images/screenshot-promo.jpg" />
+		<meta name="twitter:image" content="https://hash-checker.techlearners.xyz/images/screenshot-promo.jpg" />
 		<link rel="icon" href="images/favicon.ico" sizes="32x32" />
 		<link rel="stylesheet" href="css/bulma.css" />
 		<link rel="stylesheet" href="css/styles.css" />
